Исправлен Navbar: используется обычный img вместо Next.js Image для флагов

--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -364,27 +364,339 @@
     "cases": {
       "crypto": {
         "title": "Крипто-трейдеры - Telegram Radar",
-        "description": "Автоматизируй мониторинг крипто-каналов. Получай сигналы о листингах, пампах и важных новостях первым."
+        "description": "Автоматизируй мониторинг крипто-каналов. Получай сигналы о листингах, пампах и важных новостях первым.",
+        "hero": {
+          "title": "Крипто-трейдеры",
+          "subtitle": "Мониторь 100+ крипто-каналов одновременно. Получай только релевантные сигналы за секунды.",
+          "button": "Начать мониторинг"
+        },
+        "problems": {
+          "title": "Проблемы крипто-трейдеров",
+          "missedOpportunities": {
+            "title": "Упущенные возможности",
+            "description": "Пока ты просматриваешь каналы вручную, другие трейдеры уже входят в позиции. Каждая минута задержки может стоить прибыли."
+          },
+          "informationNoise": {
+            "title": "Информационный шум",
+            "description": "Сотни сообщений в день, но только единицы действительно важны. Как найти нужное среди всего этого шума?"
+          }
+        },
+        "solution": {
+          "title": "Решение с Telegram Radar",
+          "monitoring": {
+            "title": "Мониторинг 100+ каналов",
+            "description": "Отслеживай все важные крипто-каналы одновременно: новости о листингах, сигналы от аналитиков, обсуждения в сообществах. Ничего не пропустишь."
+          },
+          "filtering": {
+            "title": "Точная фильтрация сигналов",
+            "description": "Настрой мониторинг по ключевым словам: названия монет, термины \"листинг\", \"памп\", \"дамп\", \"аирдроп\". Получай только релевантные сообщения."
+          },
+          "notifications": {
+            "title": "Мгновенные уведомления",
+            "description": "Получай сигналы в реальном времени. Первым узнавай о важных событиях и принимай решения быстрее конкурентов."
+          }
+        },
+        "examples": {
+          "title": "Примеры использования",
+          "listings": {
+            "title": "Мониторинг листингов",
+            "description": "Настрой ключевые слова: \"листинг\", \"listing\", \"новый токен\". Получай уведомления о новых листингах на биржах за секунды."
+          },
+          "signals": {
+            "title": "Отслеживание сигналов",
+            "description": "Мониторь каналы аналитиков по ключевым словам: названия монет, \"buy\", \"sell\", \"target\". Не пропусти важные сигналы."
+          },
+          "news": {
+            "title": "Новости и события",
+            "description": "Отслеживай новости о партнерствах, обновлениях протоколов, важных событиях в экосистеме криптовалют."
+          }
+        },
+        "cta": {
+          "title": "Начни прямо сейчас",
+          "description": "Настрой мониторинг крипто-каналов за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "button": "Настроить мониторинг"
+        },
+        "backToHome": "← Вернуться на главную"
       },
       "marketers": {
         "title": "Маркетологи - Telegram Radar",
-        "description": "Автоматизируй поиск контента для репостов. Находи тренды раньше конкурентов."
+        "description": "Автоматизируй поиск контента для репостов. Находи тренды раньше конкурентов.",
+        "hero": {
+          "title": "Маркетологи",
+          "subtitle": "Автоматизируй поиск контента для репостов. Находи тренды раньше конкурентов.",
+          "button": "Начать использовать"
+        },
+        "problems": {
+          "title": "Вызовы маркетологов",
+          "contentSearch": {
+            "title": "Поиск контента",
+            "description": "Часы ежедневно тратятся на поиск релевантного контента для клиентов. Нужно мониторить десятки каналов вручную."
+          },
+          "competitiveIntelligence": {
+            "title": "Конкурентная разведка",
+            "description": "Важно отслеживать, что публикуют конкуренты, какие тренды появляются, чтобы быть впереди."
+          }
+        },
+        "solution": {
+          "title": "Как Telegram Radar помогает",
+          "autoSearch": {
+            "title": "Автоматический поиск контента",
+            "description": "Настрой мониторинг по тематикам ваших клиентов. Получай релевантный контент автоматически, без ручного поиска."
+          },
+          "trendWatching": {
+            "title": "Тренд-вотчинг",
+            "description": "Отслеживай популярные темы и тренды в вашей нише. Будь первым, кто использует новые идеи для контента."
+          },
+          "timeSaving": {
+            "title": "Экономия времени",
+            "description": "Экономь 10-15 часов в неделю на поиске контента. Фокусируйся на стратегии и креативе, а не на рутине."
+          }
+        },
+        "examples": {
+          "title": "Примеры использования",
+          "competitors": {
+            "title": "Мониторинг конкурентов",
+            "description": "Отслеживай каналы конкурентов и клиентов. Узнавай первым о новых публикациях и акциях."
+          },
+          "reposts": {
+            "title": "Поиск контента для репостов",
+            "description": "Настрой фильтры по тематикам клиентов. Получай готовый контент для публикации автоматически."
+          },
+          "mentions": {
+            "title": "Отслеживание упоминаний",
+            "description": "Мониторь упоминания брендов клиентов. Реагируй на обсуждения и отзывы в реальном времени."
+          }
+        },
+        "cta": {
+          "title": "Начни автоматизировать",
+          "description": "Настрой мониторинг контента для ваших клиентов за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "button": "Настроить мониторинг"
+        },
+        "backToHome": "← Вернуться на главную"
       },
       "media": {
         "title": "Медиа и журналисты - Telegram Radar",
-        "description": "Будь первым с новостями. Агрегируй информацию из 200+ источников за секунды."
+        "description": "Будь первым с новостями. Агрегируй информацию из 200+ источников за секунды.",
+        "hero": {
+          "title": "Медиа и журналисты",
+          "subtitle": "Будь первым с новостями. Агрегируй информацию из 200+ источников за секунды.",
+          "button": "Начать мониторинг"
+        },
+        "problems": {
+          "title": "Проблемы медиа",
+          "speed": {
+            "title": "Скорость публикации",
+            "description": "В медиа скорость - это всё. Пока ты ищешь информацию вручную, конкуренты уже публикуют новости."
+          },
+          "sources": {
+            "title": "Множество источников",
+            "description": "Нужно отслеживать сотни каналов и источников. Как не пропустить важную новость среди потока информации?"
+          }
+        },
+        "solution": {
+          "title": "Решение для медиа",
+          "aggregation": {
+            "title": "Агрегация из 200+ источников",
+            "description": "Мониторь все важные новостные каналы, блоги, официальные источники одновременно. Получай информацию из всех источников в одном месте."
+          },
+          "filtering": {
+            "title": "Фильтрация по темам",
+            "description": "Настрой мониторинг по ключевым словам: темы, имена, события. Получай только релевантные новости для вашей редакции."
+          },
+          "firstNews": {
+            "title": "Первым с новостями",
+            "description": "Получай уведомления о важных событиях в реальном времени. Публикуй новости раньше конкурентов."
+          }
+        },
+        "examples": {
+          "title": "Примеры использования",
+          "newsChannels": {
+            "title": "Мониторинг новостных каналов",
+            "description": "Отслеживай все важные новостные каналы по вашей тематике. Получай новости автоматически, без ручного поиска."
+          },
+          "events": {
+            "title": "Отслеживание событий",
+            "description": "Настрой мониторинг по ключевым словам: названия событий, имена, места. Узнавай о событиях первым."
+          },
+          "aggregation": {
+            "title": "Агрегация информации",
+            "description": "Собирай информацию из разных источников в один канал. Экономь время на поиске и анализе."
+          }
+        },
+        "cta": {
+          "title": "Начни использовать",
+          "description": "Настрой мониторинг новостных источников за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "button": "Настроить мониторинг"
+        },
+        "backToHome": "← Вернуться на главную"
       },
       "ecommerce": {
         "title": "E-commerce - Telegram Radar",
-        "description": "Находи выгодные предложения и тренды раньше конкурентов. Автоматизируй поиск товаров."
+        "description": "Находи выгодные предложения и тренды раньше конкурентов. Автоматизируй поиск товаров.",
+        "hero": {
+          "title": "E-commerce",
+          "subtitle": "Находи выгодные предложения и тренды раньше конкурентов. Автоматизируй поиск товаров.",
+          "button": "Начать мониторинг"
+        },
+        "problems": {
+          "title": "Вызовы e-commerce",
+          "deals": {
+            "title": "Поиск выгодных предложений",
+            "description": "Нужно отслеживать десятки каналов с распродажами, акциями и специальными предложениями. Как не пропустить выгодную сделку?"
+          },
+          "trendWatching": {
+            "title": "Тренд-вотчинг",
+            "description": "Важно знать, какие товары становятся популярными, чтобы вовремя пополнить ассортимент или запустить рекламу."
+          }
+        },
+        "solution": {
+          "title": "Решение для e-commerce",
+          "sales": {
+            "title": "Мониторинг распродаж",
+            "description": "Отслеживай каналы с распродажами, акциями и специальными предложениями. Получай уведомления о выгодных сделках автоматически."
+          },
+          "trends": {
+            "title": "Отслеживание трендов",
+            "description": "Мониторь обсуждения товаров, отзывы, популярные категории. Узнавай о трендах раньше конкурентов."
+          },
+          "intelligence": {
+            "title": "Конкурентная разведка",
+            "description": "Отслеживай каналы конкурентов, их акции и новинки. Анализируй стратегии и оставайся впереди."
+          }
+        },
+        "examples": {
+          "title": "Примеры использования",
+          "sales": {
+            "title": "Мониторинг распродаж",
+            "description": "Настрой ключевые слова: \"скидка\", \"распродажа\", \"акция\", названия брендов. Получай уведомления о выгодных предложениях."
+          },
+          "newProducts": {
+            "title": "Отслеживание новинок",
+            "description": "Мониторь каналы производителей и дистрибьюторов. Узнавай о новых товарах первым."
+          },
+          "demand": {
+            "title": "Анализ спроса",
+            "description": "Отслеживай обсуждения товаров, отзывы, популярные категории. Планируй закупки на основе данных."
+          }
+        },
+        "cta": {
+          "title": "Начни использовать",
+          "description": "Настрой мониторинг товаров и предложений за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "button": "Настроить мониторинг"
+        },
+        "backToHome": "← Вернуться на главную"
       },
       "hr": {
         "title": "HR и рекрутеры - Telegram Radar",
-        "description": "Находи таланты быстрее. Автоматизируй поиск кандидатов и мониторинг рынка труда."
+        "description": "Находи таланты быстрее. Автоматизируй поиск кандидатов и мониторинг рынка труда.",
+        "hero": {
+          "title": "HR и рекрутеры",
+          "subtitle": "Находи таланты быстрее. Автоматизируй поиск кандидатов и мониторинг рынка труда.",
+          "button": "Начать поиск"
+        },
+        "problems": {
+          "title": "Вызовы HR и рекрутеров",
+          "candidates": {
+            "title": "Поиск кандидатов",
+            "description": "Нужно мониторить десятки каналов с вакансиями и резюме. Поиск подходящих кандидатов занимает часы ежедневно."
+          },
+          "analytics": {
+            "title": "Рыночная аналитика",
+            "description": "Важно отслеживать тренды на рынке труда: популярные навыки, зарплаты, требования работодателей."
+          }
+        },
+        "solution": {
+          "title": "Решение для HR",
+          "autoSearch": {
+            "title": "Автоматический поиск кандидатов",
+            "description": "Мониторь каналы с резюме и вакансиями. Настрой фильтры по навыкам, опыту, локации. Получай подходящих кандидатов автоматически."
+          },
+          "market": {
+            "title": "Мониторинг рынка труда",
+            "description": "Отслеживай тренды: популярные навыки, зарплаты, требования. Анализируй рынок и планируй стратегию найма."
+          },
+          "proactive": {
+            "title": "Проактивный рекрутинг",
+            "description": "Находи таланты до того, как они начнут искать работу. Связывайся с кандидатами первым."
+          }
+        },
+        "examples": {
+          "title": "Примеры использования",
+          "resumes": {
+            "title": "Мониторинг резюме",
+            "description": "Настрой фильтры по навыкам, опыту, локации. Получай уведомления о новых резюме, соответствующих вашим требованиям."
+          },
+          "competitors": {
+            "title": "Отслеживание вакансий конкурентов",
+            "description": "Мониторь каналы конкурентов. Анализируй их требования и зарплаты. Оставайся конкурентоспособным на рынке."
+          },
+          "specialists": {
+            "title": "Поиск специалистов",
+            "description": "Отслеживай обсуждения в профессиональных сообществах. Находи активных специалистов и экспертов в вашей области."
+          }
+        },
+        "cta": {
+          "title": "Начни использовать",
+          "description": "Настрой мониторинг кандидатов и рынка труда за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "button": "Настроить мониторинг"
+        },
+        "backToHome": "← Вернуться на главную"
       },
       "resellers": {
         "title": "Реселлеры - Telegram Radar",
-        "description": "Не упускай выгодные сделки. Автоматизируй поиск товаров и услуг для перепродажи."
+        "description": "Не упускай выгодные сделки. Автоматизируй поиск товаров и услуг для перепродажи.",
+        "hero": {
+          "title": "Реселлеры",
+          "subtitle": "Не упускай выгодные сделки. Автоматизируй поиск товаров и услуг для перепродажи.",
+          "button": "Начать поиск"
+        },
+        "problems": {
+          "title": "Вызовы реселлеров",
+          "deals": {
+            "title": "Поиск выгодных предложений",
+            "description": "Нужно постоянно мониторить десятки каналов с предложениями товаров и услуг. Выгодные сделки разбирают за минуты."
+          },
+          "missed": {
+            "title": "Упущенные возможности",
+            "description": "Пока ты просматриваешь каналы вручную, другие реселлеры уже покупают выгодные товары. Каждая минута задержки - упущенная прибыль."
+          }
+        },
+        "solution": {
+          "title": "Решение для реселлеров",
+          "notifications": {
+            "title": "Мгновенные уведомления",
+            "description": "Получай уведомления о выгодных предложениях в реальном времени. Реагируй быстрее конкурентов и закрывай сделки первым."
+          },
+          "filtering": {
+            "title": "Фильтрация по критериям",
+            "description": "Настрой мониторинг по ключевым словам: категории товаров, цены, условия. Получай только релевантные предложения."
+          },
+          "channels": {
+            "title": "Мониторинг множества каналов",
+            "description": "Отслеживай десятки каналов одновременно: маркетплейсы, группы продаж, каналы с предложениями. Ничего не пропустишь."
+          }
+        },
+        "examples": {
+          "title": "Примеры использования",
+          "sales": {
+            "title": "Мониторинг распродаж",
+            "description": "Настрой ключевые слова: \"скидка\", \"распродажа\", \"выгодно\", названия категорий товаров. Получай уведомления о выгодных предложениях."
+          },
+          "wholesale": {
+            "title": "Поиск оптовых предложений",
+            "description": "Мониторь каналы с оптовыми предложениями. Находи товары для перепродажи с хорошей маржой."
+          },
+          "services": {
+            "title": "Отслеживание услуг",
+            "description": "Мониторь предложения услуг для перепродажи: подписки, курсы, доступы. Находи выгодные партнерства."
+          }
+        },
+        "cta": {
+          "title": "Начни использовать",
+          "description": "Настрой мониторинг выгодных предложений за 3 минуты. Бесплатный тариф доступен навсегда.",
+          "button": "Настроить мониторинг"
+        },
+        "backToHome": "← Вернуться на главную"
       }
     }
   },
