--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -763,6 +763,52 @@
           "changeFormat": {
             "question": "Можно ли изменить формат публикации после настройки?",
             "answer": "Да:\n• Формат можно изменить в любой момент\n• Изменение применяется к новым сообщениям\n• Старые сообщения не изменяются\n\nКак изменить:\n1. Откройте настройки канала публикации\n2. \"🔍 Фильтр сообщений для постинга\"\n3. \"📄 Пересылка или копипаст\"\n4. Выберите новый формат"
+          },
+          "sourceLink": {
+            "question": "Как добавить ссылку на источник в сообщения?",
+            "answer": "Функция ссылки на источник:\n• Можно включить/выключить в настройках канала\n• Добавляет кликабельную ссылку на оригинальное сообщение\n• Работает с форматами Forward и Copy\n\nКак включить:\n1. Откройте настройки канала публикации\n2. \"🔍 Фильтр сообщений для постинга\"\n3. Включите опцию \"Добавить ссылку на источник\"\n\nФормат:\nСсылка появляется в конце сообщения:\n[Название канала](https://t.me/channel_username/123)"
+          },
+          "forwardVsCopy": {
+            "question": "В чём разница между Forward и Copy?",
+            "answer": "Forward (пересылка оригинала):\n✅ Сохраняет авторство и источник\n✅ Подписчики видят исходный канал\n✅ Сохраняет оригинальное форматирование\n❌ Видно, что сообщение переслано\n❌ Зависит от доступа к оригиналу\n\nCopy (копипаст):\n✅ Сообщение выглядит как оригинальное\n✅ Можно скрыть источник\n✅ Независимо от оригинала\n❌ Теряется информация об авторе\n❌ Может потеряться форматирование\n\nИспользуйте Forward для:\n• Новостных каналов\n• Каналов с авторским контентом\n• Когда важна прозрачность источника\n\nИспользуйте Copy для:\n• Агрегаторов новостей\n• Анонимных каналов\n• Когда оригинал может быть удалён"
+          }
+        }
+      },
+      "filtering": {
+        "title": "Режимы фильтрации сообщений",
+        "items": {
+          "repostAll": {
+            "question": "Что такое режим \"Репост всех сообщений\"?",
+            "answer": "Режим репоста всех:\n• Публикует ВСЕ сообщения из каналов мониторинга\n• Фильтрация по ключевым словам не применяется\n• Каждое сообщение публикуется автоматически\n\nКак включить:\n1. Откройте настройки канала публикации\n2. \"🔍 Фильтр сообщений для постинга\"\n3. Нажмите \"🌐 Все сообщения\"\n4. Подтвердите активацию\n\nЧто происходит:\n• Все настройки ключевых слов для этого канала удаляются\n• Все сообщения из каналов мониторинга будут публиковаться\n• Можно вернуться к фильтрации по ключевым словам в любой момент\n\nИспользуйте когда:\n• Хотите весь контент из исходного канала\n• Фильтрация не нужна\n• Создаёте агрегатор контента"
+          },
+          "keywordFiltering": {
+            "question": "Как работает фильтрация по ключевым словам?",
+            "answer": "Как это работает:\n1. Бот извлекает текст из сообщения\n2. Проверяет на совпадение с ключевыми словами\n3. Если найдено совпадение - сообщение публикуется\n4. Если совпадений нет - сообщение пропускается\n\nОсобенности:\n• Поиск не чувствителен к регистру (по умолчанию)\n• Поиск по части слова\n• Поиск по всему тексту сообщения\n• Достаточно хотя бы одного совпадения\n\nПример:\nКлючевые слова: \"bitcoin\", \"ethereum\"\nСообщение: \"Bitcoin достиг нового максимума\"\nРезультат: ✅ Опубликовано (bitcoin совпало)\n\nСообщение: \"Новости фондового рынка\"\nРезультат: ❌ Не опубликовано (совпадений нет)"
+          },
+          "combinedModes": {
+            "question": "Можно ли комбинировать \"репост всех\" и фильтрацию по ключевым словам?",
+            "answer": "Да, можно комбинировать режимы:\n• Некоторые каналы мониторинга могут использовать \"репост всех\"\n• Другие каналы могут использовать фильтрацию по ключевым словам\n• Оба режима работают одновременно в одном канале публикации\n\nПример:\nКанал публикации: \"Новости\"\n├── Канал мониторинга \"Cryptonews\" → репост всех\n└── Канал мониторинга \"TechNews\" → ключевые слова: \"bitcoin\", \"ethereum\"\n\nРезультат:\n• Все сообщения из \"Cryptonews\" публикуются\n• Только сообщения с ключевыми словами из \"TechNews\" публикуются\n\nКак настроить:\n1. Добавьте несколько каналов мониторинга\n2. Для некоторых каналов включите \"репост всех\"\n3. Для других каналов настройте фильтрацию по ключевым словам\n4. Оба режима работают автоматически"
+          }
+        }
+      },
+      "pricing": {
+        "title": "Тарифы и планы",
+        "items": {
+          "freePlan": {
+            "question": "Что входит в бесплатный план?",
+            "answer": "Возможности бесплатного плана:\n• До 3 каналов (мониторинг + публикация)\n• До 10 ключевых запросов\n• До 10 постов при копировании старых сообщений\n• Базовая поддержка\n• Бесплатно навсегда - без ограничений по времени\n\nОграничения:\n• Подключение личного аккаунта: недоступно\n• Можно мониторить только публичные каналы\n• Ограниченное количество каналов\n\nИдеально для:\n• Тестирования сервиса\n• Базовых потребностей в мониторинге\n• Личного использования с небольшим количеством каналов"
+          },
+          "paidPlans": {
+            "question": "Какие есть платные планы и их лимиты?",
+            "answer": "План Light:\n• 50 каналов, 50 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 150 Telegram Stars/месяц (≈3 EUR)\n\nПлан Medium:\n• 100 каналов, 100 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 250 Telegram Stars/месяц (≈5 EUR)\n\nПлан Hard:\n• 200 каналов, 200 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 500 Telegram Stars/месяц (≈12 EUR)\n\nПлан Rock:\n• 500 каналов, 200 ключевых слов\n• Личный аккаунт: доступен\n• Цена: 1000 Telegram Stars/месяц\n\nВсе платные планы включают:\n• Мониторинг приватных каналов\n• Подключение личного аккаунта\n• Приоритетная поддержка"
+          },
+          "limits": {
+            "question": "Как рассчитываются лимиты каналов?",
+            "answer": "Что учитывается в лимите:\n• Каналы мониторинга (откуда берутся сообщения)\n• Каналы публикации (куда публикуются сообщения)\n• Итого = каналы мониторинга + каналы публикации\n\nПример:\n• 2 канала мониторинга + 1 канал публикации = 3 канала\n• На бесплатном плане (лимит 3) - лимит достигнут\n• Нельзя добавить больше каналов\n\nКак проверить:\n1. Перейдите в \"💳 Лимиты\"\n2. Проверьте строку \"Каналы: X / Y\"\n3. X = текущее количество, Y = лимит\n\nКогда лимит достигнут:\n• Бот уведомит: \"⚠️ Достигнут лимит каналов: X\"\n• Нужно удалить каналы или обновить план"
+          },
+          "changePlan": {
+            "question": "Как изменить или обновить план?",
+            "answer": "Как обновить:\n1. Перейдите в \"💳 Лимиты\"\n2. Выберите новый план из доступных планов\n3. Оплатите через Telegram Stars\n4. План изменяется автоматически\n\nЧто происходит:\n• Новые лимиты применяются сразу\n• Существующие настройки сохраняются\n• Если текущее использование превышает новый лимит, нужно удалить лишние элементы\n\nПример:\n• У вас 30 каналов на плане Medium (лимит 100)\n• Переключаетесь на план Light (лимит 50)\n• Все 30 каналов продолжают работать\n• Можете добавить ещё 20 каналов\n\nОплата:\n• Через Telegram Stars\n• Используйте десктопное приложение Telegram для лучших курсов\n• Подписка продлевается на выбранный период"
           }
         }
       },
@@ -780,6 +826,10 @@
           "multipleUsers": {
             "question": "Можно ли использовать один аккаунт для нескольких пользователей?",
             "answer": "Технически:\n• Один аккаунт можно подключить только к одному пользователю бота\n• При попытке подключить тот же аккаунт к другому пользователю предыдущая сессия отключится\n\nРекомендации:\n• Используйте отдельный аккаунт для каждого пользователя бота\n• Это обеспечивает безопасность и независимость настроек"
+          },
+          "disconnect": {
+            "question": "Как отключить личный аккаунт?",
+            "answer": "Как отключить:\n1. Перейдите в \"🔌 Подключить личный аккаунт\"\n2. Нажмите \"🔴 Отключить сессию\"\n3. Подтвердите отключение\n\nЧто происходит:\n• Сессия удаляется из системы\n• Публичные каналы продолжают работать\n• Приватные каналы и группы становятся недоступными\n• Настройки каналов мониторинга сохраняются\n\nВажно:\n• Отключение необратимо\n• Нужно переподключиться, чтобы использовать приватные каналы снова\n• Данные сессии полностью удаляются"
           }
         }
       },
@@ -805,6 +855,39 @@
           "keywordsNotWorking": {
             "question": "Ключевые слова не работают",
             "answer": "Возможные причины:\n• Ключевые слова не добавлены\n• Неправильное написание ключевых слов\n• Ключевые слова не применены к каналу публикации\n\nРешения:\n1. Проверьте список ключевых слов\n2. Убедитесь, что ключевые слова добавлены к каналу публикации\n3. Проверьте написание ключевых слов\n4. Попробуйте добавить ключевые слова заново"
+          },
+          "delay": {
+            "question": "Сообщения приходят с задержкой",
+            "answer": "Нормальное поведение:\n• Задержка 5-30 секунд - это нормально\n• Зависит от нагрузки на сервер и очереди задач\n\nЕсли задержка слишком большая:\n1. Проверьте интернет-соединение\n2. Проверьте нагрузку на сервер (может быть временной)\n3. Обратитесь в поддержку, если задержка постоянная\n\nОптимизация:\n• Бот использует асинхронную обработку\n• Очередь задач обрабатывается непрерывно\n• Задержки возможны при высокой нагрузке"
+          },
+          "channelNotMonitored": {
+            "question": "Некоторые каналы не мониторятся",
+            "answer": "Возможные причины:\n• Канал удалён из мониторинга\n• Канал заблокирован или недоступен\n• Проблемы с подключением\n• Канал приватный и нет доступа\n\nРешения:\n1. Проверьте список каналов мониторинга\n2. Убедитесь, что канал существует и доступен\n3. Для приватных каналов - проверьте подключение личного аккаунта\n4. Попробуйте удалить и добавить канал заново\n\nПроверка:\n• Откройте канал в Telegram\n• Убедитесь, что канал доступен\n• Проверьте настройки мониторинга в боте"
+          },
+          "botNotAdmin": {
+            "question": "Ошибка \"Бот не является администратором\"",
+            "answer": "Причина:\n• Бот не добавлен как администратор или удалён\n\nРешения:\n1. Добавьте бота как администратора канала\n2. Включите право \"Опубликовывать сообщения\"\n3. Нажмите \"Проверить права\" в меню канала в боте\n\nКак добавить бота:\n1. Откройте настройки канала в Telegram\n2. Перейдите в \"Администраторы\"\n3. Нажмите \"Добавить администратора\"\n4. Найдите @radar_telegram_bot\n5. Включите \"Опубликовывать сообщения\"\n6. Нажмите \"Готово\""
+          },
+          "accountDisconnected": {
+            "question": "Аккаунт отключился сам",
+            "answer": "Возможные причины:\n• Сессия истекла (редко)\n• Проблемы с сервером\n• Пароль Telegram изменён\n• Проблемы с подключением\n\nРешения:\n1. Переподключите аккаунт\n2. Проверьте настройки безопасности Telegram\n3. Обратитесь в поддержку, если проблема повторяется\n\nПрофилактика:\n• Регулярно проверяйте статус подключения\n• Не меняйте пароль Telegram без необходимости\n• Сообщайте о проблемах в поддержку"
+          }
+        }
+      },
+      "tips": {
+        "title": "Советы и рекомендации",
+        "items": {
+          "effectiveKeywords": {
+            "question": "Как создать эффективные ключевые слова?",
+            "answer": "Принципы:\n• Используйте конкретные слова, а не общие\n• Избегайте слишком коротких слов (менее 3 символов)\n• Комбинируйте несколько слов для точного поиска\n• Учитывайте синонимы и варианты написания\n\nПримеры:\n❌ Плохо: \"новости\", \"крипто\"\n✅ Хорошо: \"bitcoin\", \"ethereum\", \"криптовалюта\"\n\nСоветы:\n• Используйте слова, которые точно описывают нужный контент\n• Добавляйте варианты написания (например, \"bitcoin\" и \"биткоин\")\n• Исключайте слова, которые могут давать много ложных срабатываний\n• Тестируйте ключевые слова и корректируйте на основе результатов"
+          },
+          "thematicChannels": {
+            "question": "Как организовать каналы публикации?",
+            "answer": "Принцип:\n• Создавайте отдельные каналы для разных тем\n• Используйте разные ключевые слова для каждого канала\n• Настраивайте каналы независимо\n\nПример:\nКанал \"Криптовалюты\":\n├── Каналы мониторинга: Cryptonews, BitcoinNews\n├── Ключевые слова: bitcoin, ethereum, криптовалюта\n\nКанал \"Технологии\":\n├── Каналы мониторинга: TechNews, ITChannel\n├── Ключевые слова: технологии, IT, программирование\n\nПреимущества:\n• Подписчики получают только релевантный контент\n• Удобнее управлять контентом\n• Можно настроить разные форматы публикации\n• Лучшая организация"
+          },
+          "bulkAddChannels": {
+            "question": "Как эффективно добавить несколько каналов?",
+            "answer": "Советы:\n• Добавляйте каналы группами, разделёнными запятой\n• Используйте автоматическую очередь (встроена)\n• Проверьте список каналов после добавления\n\nПример:\nВместо добавления по одному:\n1. Добавить cryptonews\n2. Подождать\n3. Добавить bitcoin\n...\n\nИспользуйте:\nДобавить: cryptonews, bitcoin, ethereum, blockchain\n(Все каналы добавлены автоматически с задержкой)\n\nПреимущества:\n• Экономит время\n• Защита от лимитов флуда\n• Удобное управление\n\nКак это работает:\n• Каналы добавляются в очередь автоматически\n• Обработка с задержкой 3-5 секунд между каналами\n• Вы получаете уведомление при завершении"
           }
         }
       }
