Заменить пункт меню 'Возможности' на 'Для кого?' со ссылкой на блок UseCases (#usecases)

--- a/locales/en/common.json
+++ b/locales/en/common.json
@@ -1,6 +1,7 @@
 {
   "navbar": {
     "features": "Features",
+    "forWhom": "For Whom?",
     "pricing": "Pricing",
     "faq": "FAQ",
     "setup": "Setup in 3 minutes",
