--- a/locales/es/common.json
+++ b/locales/es/common.json
@@ -1,6 +1,7 @@
 {
   "navbar": {
     "features": "Características",
+    "forWhom": "¿Para quién?",
     "pricing": "Precios",
     "faq": "FAQ",
     "setup": "Configurar en 3 minutos",
