--- a/locales/ru/common.json
+++ b/locales/ru/common.json
@@ -1,6 +1,7 @@
 {
   "navbar": {
     "features": "Возможности",
+    "forWhom": "Для кого?",
     "pricing": "Тарифы",
     "faq": "FAQ",
     "setup": "Настроить за 3 минуты",
